@@ -2,6 +2,9 @@ package uk.gov.hmcts.ethos.replacement.docmosis.helpers;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import uk.gov.hmcts.ecm.common.model.helper.TribunalOffice;
 import uk.gov.hmcts.et.common.model.ccd.CCDRequest;
@@ -13,6 +16,7 @@ import uk.gov.hmcts.ethos.utils.CCDRequestBuilder;
 import uk.gov.hmcts.ethos.utils.CaseDataBuilder;
 
 import java.util.ArrayList;
+import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -37,7 +41,7 @@ class FlagsImageHelperTest {
             buildFlagsImageFileName(caseDetails);
 
             assertEquals("<font color='DeepPink' size='5'> WITH OUTSTATION </font>", caseData.getFlagsImageAltText());
-            assertEquals("EMP-TRIB-01000000000000.jpg", caseData.getFlagsImageFileName());
+            assertEquals("EMP-TRIB-010000000000000.jpg", caseData.getFlagsImageFileName());
         }
     }
 
@@ -108,7 +112,7 @@ class FlagsImageHelperTest {
         buildFlagsImageFileName(caseDetails);
 
         assertEquals("", caseData.getFlagsImageAltText());
-        assertEquals("EMP-TRIB-00000000000000.jpg", caseData.getFlagsImageFileName());
+        assertEquals("EMP-TRIB-000000000000000.jpg", caseData.getFlagsImageFileName());
     }
 
     @Test
@@ -120,7 +124,7 @@ class FlagsImageHelperTest {
             buildFlagsImageFileName(caseDetails);
             assertEquals("", caseData.getFlagsImageAltText());
 
-            assertEquals("EMP-TRIB-00000000000000.jpg", caseData.getFlagsImageFileName());
+            assertEquals("EMP-TRIB-000000000000000.jpg", caseData.getFlagsImageFileName());
         });
     }
 
@@ -129,9 +133,9 @@ class FlagsImageHelperTest {
         CaseData caseData = CaseDataBuilder.builder()
                 .withRespondent("Test", NO, null, false)
                 .build();
-        caseData.getRespondentCollection().get(0).getValue().setEt3ResponseRespondentSupportNeeded(YES);
+        caseData.getRespondentCollection().getFirst().getValue().setEt3ResponseRespondentSupportNeeded(YES);
         buildFlagsImageFileName(ENGLANDWALES_CASE_TYPE_ID, caseData);
-        assertEquals("EMP-TRIB-00000000001000.jpg", caseData.getFlagsImageFileName());
+        assertEquals("EMP-TRIB-000000000010000.jpg", caseData.getFlagsImageFileName());
         assertEquals("<font color='DarkSlateBlue' size='5'> REASONABLE ADJUSTMENT </font>",
                 caseData.getFlagsImageAltText());
 
@@ -142,13 +146,13 @@ class FlagsImageHelperTest {
         CaseData caseData = new CaseData();
         caseData.setMigratedFromEcm(YES);
         buildFlagsImageFileName(ENGLANDWALES_CASE_TYPE_ID, caseData);
-        assertEquals("EMP-TRIB-10000000000000.jpg", caseData.getFlagsImageFileName());
+        assertEquals("EMP-TRIB-100000000000000.jpg", caseData.getFlagsImageFileName());
         assertEquals("<font color='#D6292D' size='5'> MIGRATED FROM ECM </font>",
                 caseData.getFlagsImageAltText());
 
         caseData.setMigratedFromEcm(null);
         buildFlagsImageFileName(ENGLANDWALES_CASE_TYPE_ID, caseData);
-        assertEquals("EMP-TRIB-00000000000000.jpg", caseData.getFlagsImageFileName());
+        assertEquals("EMP-TRIB-000000000000000.jpg", caseData.getFlagsImageFileName());
     }
 
     private CaseDetails createCaseDetails(String caseTypeId, CaseData caseData) {
@@ -167,11 +171,31 @@ class FlagsImageHelperTest {
         caseData.setAdditionalCaseInfoType(additionalCaseInfoType);
 
         buildFlagsImageFileName(ENGLANDWALES_CASE_TYPE_ID, caseData);
-        assertEquals("EMP-TRIB-00000000000001.jpg", caseData.getFlagsImageFileName());
+        assertEquals("EMP-TRIB-000000000000010.jpg", caseData.getFlagsImageFileName());
         assertTrue(caseData.getFlagsImageAltText().contains("SPEAK TO REJ"));
 
         buildFlagsImageFileName(SCOTLAND_CASE_TYPE_ID, caseData);
-        assertEquals("EMP-TRIB-01000000000010.jpg", caseData.getFlagsImageFileName());
+        assertEquals("EMP-TRIB-010000000000100.jpg", caseData.getFlagsImageFileName());
         assertTrue(caseData.getFlagsImageAltText().contains("SPEAK TO VP"));
     }
+
+    @ParameterizedTest
+    @MethodSource("reservedToJudgeFlagsProvider")
+    void reservedToJudgeFlag(String flag, String expectedAltText) {
+        AdditionalCaseInfoType additionalCaseInfoType = new AdditionalCaseInfoType();
+        additionalCaseInfoType.setReservedToJudge(flag);
+        CaseData caseData = new CaseData();
+        caseData.setAdditionalCaseInfoType(additionalCaseInfoType);
+        buildFlagsImageFileName(ENGLANDWALES_CASE_TYPE_ID, caseData);
+        assertEquals(expectedAltText, caseData.getFlagsImageAltText());
+    }
+
+    private static Stream<Arguments> reservedToJudgeFlagsProvider() {
+        return Stream.of(
+            Arguments.of("Yes", "<font color='#85994b' size='5'> RESERVED TO JUDGE </font>"),
+            Arguments.of("No", ""),
+            Arguments.of(null, "")
+        );
+    }
+
 }
